--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bullnose2",
   "version": "1.0.0",
   "description": "Version 2.0 for Bullnose. More robust and responsiveness added.",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "deploy": "gh-pages -d dist"
   },
@@ -16,7 +16,7 @@
   "bugs": {
     "url": "https://github.com/Rivas1/bullnose2/issues"
   },
-  "homepage": "https://rivas1.github.io/bullnose2",
+  "homepage": "https://rivas1.github.io/bullnose2/index.html",
   "dependencies": {
     "gh-pages": "^2.0.1"
   }
