Re-started gh-pages setup (Staging area)

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "homepage": "https://rivas1.github.io/bullnose2",
+  "homepage": "https://github.com/Rivas1/bullnose2",
   "dependencies": {
     "gh-pages": "^2.0.1"
   }
